--- a/style.css
+++ b/style.css
@@ -1,13 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Merriweather&display=swap');
 
 :root {
-    --color-mediumpurple: #9381FF;
-    --color-maximumbluepurple: #B8B8FF;
-    --color-antiquewhite: rgba(255, 216, 190);
-    --color-unbleachedsilk: rgba(255, 216, 190);
+    --midnight: #07004D;
+    --blueCrayola: #2D82B7;
+    --aquamarine: #42E2B8;
+    --almond: #F3DFBF;
+    --spanishPink: #F3B9BD;
+    --white: #f3f3f3;
 }
 
-*
+*,
 *::before,
 *::after {
     box-sizing: border-box;
@@ -18,7 +20,7 @@ body {
     font-size: 1rem;
     font-weight: 400;
     line-height: 1.4;
-    color: var(--color-maximumbluepurple);
+    color: var(--blueCrayola);
     margin: 0;
 }
 
@@ -30,16 +32,16 @@ body::before {
     height: 100%;
     width: 100%;
     z-index: -1;
-    background: var(--color-unbleachedsilk);
+    background: var(--spanishPink);
     background-image: linear-gradient(
         115deg,
-         rgba(255, 216, 190)
+            var(--spanishPink)
     ),
     url(backjond.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-
+}
     
 h1 {
     font-weight: 400;
@@ -108,7 +110,7 @@ button {
 .clue {
     margin-left: 0.25;
     font-size: 0.9rem;
-    color: #e4e4e4;
+    color: var(--aquamarine);
 }
 
 .text-center {
@@ -118,7 +120,7 @@ button {
 /* form */
 
 form {
-    background: var(--color-antiquewhite);
+    background: var(--almond);
     padding: 2.5rem 0.625rem;
     border-radius: 0.25rem;
 }
@@ -147,8 +149,33 @@ form {
     transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 
-.form-control: focus {
+.form-control focus {
     border-color: #80bdff;
     outline: 0;
     box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
+}
+
+.input-radio,
+.input-checkbox {
+    display: inline-block;
+    margin-right: 0.625rem;
+    min-height: 1.25rem;
+    min-width: 1.25rem;
+}
+
+.input-textarea {
+    min-height: 120px;
+    width: 100%;
+    padding: 0.625rem;
+    resize: vertical;
+}
+
+.submit-button {
+    display: block;
+    width: 100%;
+    padding: 0.75rem;
+    background: var(--aquamarine);
+    color: black;
+    border-radius: 2px;
+    cursor: pointer;
 }
